# parking

./: .gitignore  CMakeLists.txt  Makefile  README.md  parking.sln
console/: CMakeLists.txt  console.cpp  console.vcxproj
mfc/: SVGImageStatic.cpp  SVGImageStatic.h  framework.h  mfc.cpp  mfc.h  mfc.rc  mfc.vcxproj  mfc.vcxproj.filters  mfcDlg.cpp  mfcDlg.h  pch.h  resource.h
parking/: CMakeLists.txt  Core.cpp  Core.h  ParallelLines.cpp  ParallelLines.h  ParkingImage.cpp  ParkingImage.h  ParkingLayout.cpp  ParkingLayout.h  Struct.h  WKTParser.cpp  WKTParser.h  bindings.cpp  parking.vcxproj  parking.vcxproj.filters  pch.h  simple_svg_1.0.0.hpp
web/: console.wasm  parking.html  parking.wasm
